changed images to royalty free images

--- a/pages/OAuth-weaknesses.html
+++ b/pages/OAuth-weaknesses.html
@@ -78,7 +78,7 @@
         <!-- main text portion of page -->
         <section class="paragraphs">
           <!-- image supplied https://infosecwriteups.com/oauth-2-0-hacking-simplified-part-1-understanding-basics-ad323cb4a05c -->
-          <img class="main-img" src="../images/oath-graphic.jpeg" alt="infographic for oath">
+          <img class="main-img" src="../images/oAuth-1200.png" alt="infographic for oath">
           <h3>What is Oauth?</h3>
           <p>
             This is a popular authorisation protocol used by large corporations such as Facebook 
@@ -120,7 +120,7 @@
           </ol>
           <!-- image supplied https://portswigger.net/web-security/oauth -->
           <img class="secondary-img" src="../images/oath-protocol.png" alt="image depicting the oath protocol">
-          
+          <caption>image supplied https://portswigger.net/web-security/oauth</caption>
           <p>There are several pieces of data that are transmitted during the Oauth protocol:</p>
           <ol>
             <li>Client_id - this is a mandatory parameter containing a unique public identifier of the client app</li>
