--- a/pages/apple-vs-google-pay.html
+++ b/pages/apple-vs-google-pay.html
@@ -72,6 +72,7 @@
         <section class="paragraphs">
           <!-- image supplied https://twitter.com/alexxubyte/status/1572614943811440642 -->
           <img class="main-img" src="../images/goog-applepay.jpg" alt="Cool picture of an eye and colourful lines">
+          <caption>image supplied https://twitter.com/alexxubyte/status/1572614943811440642</caption>
           <p>
             Apple Pay and Google Pay have become super popular in recent years. They are both very good protocols but they are implemented a 
             little differently. Since these protocols go on invisibly it can be easy to forget that somehow, your phone is connecting to your bank 
