--- a/pages/benfords-law.html
+++ b/pages/benfords-law.html
@@ -78,7 +78,7 @@
         <!-- main text content part of the blog post -->
         <section class="paragraphs">
           <!-- image supplied https://www.cyberark.com/resources/threat-research-blog/bypassing-windows-hello-without-masks-or-plastic-surgery -->
-          <img class="main-img" src="../images/benfords-law-pic.jpg" alt="Cool picture of an eye and colourful lines">
+          <img class="main-img" src="../images/graph1200.jpg" alt="Cool picture of an eye and colourful lines">
           <p>
             Benford's Law describes the unintuitive truth that not all numbers in a random set of numbers have the same likihood 
             of being present. You'd think that if you had a set of 1000 totally random numbers that you would roughly
