--- a/pages/projects.html
+++ b/pages/projects.html
@@ -79,7 +79,7 @@
 
 <!-- Skate shop project mockup -->
         <div class="container">
-          <img src="../images/skate-shop.png" alt="Image of skater doing a jump down a street" class="image">
+          <img src="../images/skateshop-1000x666.jpg" alt="Image of skater doing a jump down a street" class="image">
           <div class="overlay">
             <div class="text">
               <h2>Skate Shop</h2>
@@ -92,7 +92,7 @@
 <!-- Chat app project mock up -->
         <div class="container">
 
-          <img src="../images/chatapp.jpg" alt="picture of a mobile phone screen on in a dark room" class="image">
+          <img src="../images/chat-app1000x666.jpg" alt="picture of a mobile phone screen on in a dark room" class="image">
           <div class="overlay">
             <div class="text">
               <h2>ChatApp</h2>
@@ -104,7 +104,7 @@
         </div>
 <!-- password manager project mockup -->
         <div class="container">
-          <img src="../images/pswd-mng.webp" alt="stylistic lock and key and diary/book" class="image">
+          <img src="../images/password-1000x664.jpg" alt="stylistic lock and key and diary/book" class="image">
           <div class="overlay">
             <div class="text">
               <h2>Password King</h2>
@@ -116,7 +116,7 @@
         </div>
 <!-- InstaTwit Social App project mockup -->
         <div class="container">
-          <img src="../images/insta-twit.jpg" alt="colorful picture of a camera and an instagram logo mixed with a twitter logo" class="image">
+          <img src="../images/instatwit.png" alt="colorful picture of a camera and an instagram logo mixed with a twitter logo" class="image">
           <div class="overlay">
             <div class="text">
               <h2>InstaTwit</h2>
