--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -89,7 +89,7 @@
       </div>
 
       <!-- second seciton of the page/white background -->
-      <div class="div-2">
+      <div id="white-div">
         <article class="text-two">
           <p>
             <b>
