--- a/pages/apple-vs-google-pay.html
+++ b/pages/apple-vs-google-pay.html
@@ -62,7 +62,7 @@
     </header>
   <!-- Main section of the page -->
     <main>
-      <div class="div-2">
+      <div id="white-div">
         <!--page title and intro  -->
         <div class="blog-title">
           <h1 class="page-heading">Basics of Google Pay Vs Apple Pay Protocols</h1>
