minor alterations, hover effects and refactoring

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -25,7 +25,7 @@
       <div class="header-shell">
         <div class="image-box">
           <a href="/index.html">
-            <img id="mike-logo" src="../images/logo3.png" alt="logo for mike.v"></a> 
+            <img id="mike-logo" src="../images/mikevibert-logo.png" alt="logo for mike.v"></a> 
         </div>
         <div class="menu-shell">
         <input type="checkbox" id="button-check"> <!-- checkbox that is used to switch hamburger to nav menu -->
@@ -79,7 +79,7 @@
 
         <!-- contact form starts here -->
         <section id="form-shell">
-          <form action="/">
+          <form action="/" method="post">
             <div id="name-email-message-shell">
               <label for="name-input" id="name-label">Name:</label>
               <input type="text" id="name-input" placeholder="Enter your name..">
@@ -87,7 +87,7 @@
               <input type="email" id="email-input" placeholder="Enter your contact email..">
               <label for="message-input" id="message-label">Message:</label>
               <textarea id="message-input" placeholder="Write me a message :)"></textarea>
-              <button type="submit">Submit</button>
+              <button class="green-text-bg-none" type="submit">Submit</button>
             </div>
           </form>
         </section>
