--- a/pages/physical_auth_attack.html
+++ b/pages/physical_auth_attack.html
@@ -24,7 +24,7 @@
       <div class="header-shell">
         <div class="image-box">
           <a href="/index.html">
-            <img id="mike-logo" src="../images/logo3.png" alt="logo for mike.v"></a> 
+            <img id="mike-logo" src="../images/mikevibert-logo.png" alt="logo for mike.v"></a> 
         </div>
         <div class="menu-shell">
         <input type="checkbox" id="button-check"> <!-- checkbox that is used to switch hamburger to nav menu -->
